use ngin for reel-demo state management

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@3sln/dodo": "link:@3sln/dodo",
     "@3sln/bones": "link:@3sln/bones",
+    "@3sln/ngin": "link:@3sln/ngin",
     "marked": "^12.0.0",
     "highlight.js": "^11.9.0",
     "glob": "^10.3.10"
