--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     ".": "./src/main.js",
     "./vite-plugin": "./vite-plugin.js"
   },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+  "bin": {
+    "reel-build": "./bin/build.js"
   },
   "dependencies": {
     "@3sln/bones": "link:@3sln/bones",
@@ -20,6 +19,7 @@
     "marked": "^16.3.0"
   },
   "devDependencies": {
+    "fs-extra": "^11.3.2",
     "vite": "^5.1.0"
   }
 }
