--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://github.com/3sln/reel.git"
   },
+  "scripts": {
+    "format": "prettier -w \"**/*.js\""
+  },
   "license": "MIT",
   "keywords": [
     "vite",
@@ -41,5 +44,8 @@
     "highlight.js": "^11.9.0",
     "marked": "^16.3.0",
     "vite": "^5.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
