--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@3sln/reel",
-  "version": "0.0.6",
+  "name": "@3sln/deck",
+  "version": "0.0.4",
   "description": "A Vite plugin for building scalable, zero-config, Markdown-based component playgrounds and documentation sites.",
   "type": "module",
   "author": "Ray Stubbs",
   "repository": {
     "type": "git",
-    "url": "https://github.com/3sln/reel.git"
+    "url": "https://github.com/3sln/deck.git"
   },
   "scripts": {
     "format": "prettier -w \"**/*.js\""
@@ -25,7 +25,7 @@
     "./vite-plugin": "./vite-plugin.js"
   },
   "bin": {
-    "reel-build": "./bin/build.js"
+    "deck-build": "./bin/build.js"
   },
   "files": [
     "bin/",
@@ -36,8 +36,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@3sln/bones": "link:@3sln/bones",
-    "@3sln/dodo": "link:@3sln/dodo",
+    "@3sln/bones": "^0.0.4",
+    "@3sln/dodo": "^0.0.4",
     "@3sln/ngin": "^0.0.1",
     "fs-extra": "^11.3.2",
     "glob": "^10.3.10",
